<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="350dp">

        <Button
            android:id="@+id/as_search"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="67dp"
            android:text="@string/search_dialog" />

        <Button
            android:id="@+id/as_cancel"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="15dp"
            android:text="@string/cancel_dialog" />

        <CheckBox
            android:id="@+id/as_favorited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="52dp"
            android:layout_toStartOf="@+id/as_search"
            android:text="@string/must_be_favorited_dialog" />

        <EditText
            android:id="@+id/as_critical_violations"
            android:layout_width="158dp"
            android:layout_height="25dp"
            android:layout_above="@+id/as_favorited"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:background="@null"
            android:hint="@string/critical_violations_dialog"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/as_hazard_level"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/as_critical_violations"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="21dp"
            android:background="@null"
            android:hint="@string/low_moderate_or_high_dialog"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/as_name"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/as_critical_violations"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="64dp"
            android:background="@null"
            android:hint="@string/enter_name_dialog"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/dialog_desc"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="212dp"
            android:layout_toStartOf="@+id/as_name"
            android:text="@string/_1_name_dialog" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="167dp"
            android:layout_toStartOf="@+id/as_name"
            android:text="@string/_2_hazard_level_dialog" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="128dp"
            android:layout_toStartOf="@+id/as_name"
            android:text="@string/_3_critical_violations_dialog" />

    </RelativeLayout>

</RelativeLayout>