<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Space
        android:id="@+id/spacer_1"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="average_sans"
        android:text="@string/connected_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/downloadDialog_fontSize_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer_1" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="average_sans"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/notConnected_description"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/downloadDialog_fontSize_secondary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="average_sans"
        android:text="@string/yesButton"
        android:textSize="@dimen/downloadDialog_fontSize_tertiary"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_marginStart="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="average_sans"
        android:text="@string/cancelButton"
        android:textSize="@dimen/downloadDialog_fontSize_tertiary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/yes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yes_button" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="average_sans"
        android:text="@string/noButton"
        android:textSize="@dimen/downloadDialog_fontSize_tertiary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/black"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Space
        android:id="@+id/spacer_2"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yes_button" />


</androidx.constraintlayout.widget.ConstraintLayout>