<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleRestaurantActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/text_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_title"
        android:textColor="#4C4848"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="376dp"
        android:layout_height="29dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#4C4848"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/text_name_title"
        app:layout_constraintTop_toBottomOf="@+id/text_name_title"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/text_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/address_title"
        android:textColor="#4C4848"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="384dp"
        android:layout_height="31dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:textColor="#4C4848"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/text_name"
        app:layout_constraintStart_toStartOf="@+id/text_address_title"
        app:layout_constraintTop_toBottomOf="@+id/text_address_title" />

    <TextView
        android:id="@+id/text_coord_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/coords_title"
        android:textColor="#4C4848"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_address" />

    <TextView
        android:id="@+id/text_insReport_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="207dp"
        android:text="@string/inspectionReport_title"
        android:textColor="#4C4848"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_inspection_reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_coord"
        app:layout_constraintVertical_bias="0.3" />

    <ListView
        android:id="@+id/list_inspection_reports"
        android:layout_width="382dp"
        android:layout_height="346dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/text_coord"
        android:layout_width="230dp"
        android:layout_height="37dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="63dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_coord_title" />


</androidx.constraintlayout.widget.ConstraintLayout>