<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/haz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="203dp"
        android:layout_marginBottom="4dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/text_rIssuesfound"
        app:layout_constraintEnd_toStartOf="@+id/image_rHazard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_rName" />

    <TextView
        android:id="@+id/text_rName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/icon_restaurant"
        app:layout_constraintTop_toTopOf="@+id/icon_restaurant" />

    <ImageView
        android:id="@+id/image_rHazard"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_restaurant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icon_restaurant"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/haz_high" />

    <ImageView
        android:id="@+id/icon_restaurant"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restaurant_icon_general" />

    <TextView
        android:id="@+id/text_rAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTextView"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/text_rName"
        app:layout_constraintTop_toBottomOf="@+id/text_rName" />

    <TextView
        android:id="@+id/text_rIssuesfound"
        android:layout_width="116dp"
        android:layout_height="19dp"
        android:text="@string/issued_found"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_lastInspected"
        app:layout_constraintEnd_toEndOf="@+id/image_rHazard" />

    <TextView
        android:id="@+id/text_lastInspected"
        android:layout_width="219dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/last_inspection"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/text_rIssuesfound"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>