<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="386dp"
        android:layout_height="509dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_ok" />

    <Button
        android:id="@+id/backtoMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <SearchView
        android:id="@+id/inputSearch"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/advancedOptions"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/backtoMap"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >

    </SearchView>


    <ImageView
        android:id="@+id/advancedOptions"
        android:layout_width="32dp"
        android:layout_height="29dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/advancedoptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/main_ok"
        android:layout_width="41dp"
        android:layout_height="24dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:text="ok"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toEndOf="@+id/main_text"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_surrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSearch" />

    <Button
        android:id="@+id/reset"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:text="@string/reset"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toEndOf="@+id/main_text"
        app:layout_constraintTop_toBottomOf="@+id/inputSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>