<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:id="@+id/relLayout1"
        android:layout_width="142dp"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="305dp"
        android:background="#fff"
        android:elevation="10dp">


        <Button
            android:id="@+id/listButton"
            android:layout_width="142dp"
            android:layout_height="44dp"
            android:text="@string/button1" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="142dp"
            android:layout_height="44dp"
            android:layout_marginTop="45dp"
            android:text="@string/reset" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_border">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_magnify"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/advancedOptions"
            android:layout_centerVertical="true"
            android:layout_marginLeft="340dp"
            android:src="@drawable/advancedoptions"/>

        <EditText
            android:id="@+id/as_name"
            android:layout_width="298dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/ic_magnify"
            android:background="@null"
            android:hint="@string/enter_address_city_or_zip_code"
            android:imeOptions="actionSearch"
            android:textColor="#000"
            android:textSize="15sp" />


    </RelativeLayout>

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/relLayout2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:id="@+id/ic_gps"
        android:src="@drawable/ic_gps"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/relLayout2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="540dp"
        android:scaleType="centerCrop"
        android:id="@+id/ic_zoomIn"
        android:src="@drawable/ic_zoomin"/>
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/relLayout2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="567dp"
        android:scaleType="centerCrop"
        android:id="@+id/ic_zoomOut"
        android:src="@drawable/ic_zoomout"/>


</RelativeLayout>